--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "pokemon_app",
   "version": "1.0.0",
-  "description": "",
+	"description": "",
+	"engines": {
+    "node": "12.18.3"
+  },
   "main": "server.js",
   "scripts": {
     "start": "react-scripts start",
